# Generated by Django 5.2.4 on 2025-08-12 07:27

import django.core.validators
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='TrendingCategory',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, unique=True, verbose_name='카테고리명')),
                ('title', models.CharField(max_length=100, verbose_name='표시 제목')),
                ('subtitle', models.CharField(max_length=200, verbose_name='부제목')),
                ('icon_name', models.CharField(max_length=50, verbose_name='아이콘명')),
                ('order', models.PositiveIntegerField(default=0, verbose_name='순서')),
                ('is_active', models.BooleanField(default=True, verbose_name='활성화')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': '트렌딩 카테고리',
                'verbose_name_plural': '트렌딩 카테고리들',
                'db_table': 'trending_categories',
                'ordering': ['order', 'name'],
            },
        ),
        migrations.CreateModel(
            name='TrendingRanking',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('rank', models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(10)], verbose_name='순위')),
                ('name', models.CharField(max_length=100, verbose_name='모델명')),
                ('score', models.CharField(max_length=50, verbose_name='점수')),
                ('provider', models.CharField(max_length=50, verbose_name='제공업체')),
                ('is_active', models.BooleanField(default=True, verbose_name='활성화')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='rankings', to='core.trendingcategory', verbose_name='카테고리')),
            ],
            options={
                'verbose_name': '트렌딩 랭킹',
                'verbose_name_plural': '트렌딩 랭킹들',
                'db_table': 'trending_rankings',
                'ordering': ['category__order', 'rank'],
                'unique_together': {('category', 'rank')},
            },
        ),
    ]
