erDiagram
  CUSTOMUSER ||--o{ POST : writes
  PLATFORM ||--o{ AIMODEL : has
  PLATFORM ||--o{ POST : used_in
  AIMODEL ||--o{ POST : selected_in
  CATEGORY ||--o{ POST : classifies
  CUSTOMUSER ||--o| USERSETTINGS : owns
  CUSTOMUSER ||--o{ USERSESSION : has
  TRENDINGCATEGORY ||--o{ TRENDINGRANKING : groups
  AIMODEL ||--o{ TRENDINGRANKING : linked_by_related_model
